--- a/interview/performance-interview/02.前端性能优化-文件优化-02.md
+++ b/interview/performance-interview/02.前端性能优化-文件优化-02.md
@@ -5,5 +5,4 @@ aside: false
 
 # 02.前端性能优化-文件优化-02
 
-<video autoplay src="http://qn.chinavanes.com/interview/performance/02.前端性能优化-文件优化-02.mp4" controls controlsList="nodownload" width="50%"/>
-
+<video autoplay src="http://qn.chinavanes.com/interview/performance/02.前端性能优化-文件优化-02.mp4" controls controlsList="nodownload" width="100%" height="680"/>
