--- a/interview/performance-interview/03.前端性能优化-请求优化-01.md
+++ b/interview/performance-interview/03.前端性能优化-请求优化-01.md
@@ -5,5 +5,4 @@ aside: false
 
 # 03.前端性能优化-请求优化-01
 
-<video autoplay src="http://qn.chinavanes.com/interview/performance/03.前端性能优化-请求优化-01.mp4" controls controlsList="nodownload" width="50%"/>
-
+<video autoplay src="http://qn.chinavanes.com/interview/performance/03.前端性能优化-请求优化-01.mp4" controls controlsList="nodownload" width="100%" height="680"/>
