--- a/interview/performance-interview/06.前端性能优化-请求优化-04.md
+++ b/interview/performance-interview/06.前端性能优化-请求优化-04.md
@@ -5,5 +5,4 @@ aside: false
 
 # 06.前端性能优化-请求优化-04
 
-<video autoplay src="http://qn.chinavanes.com/interview/performance/06.前端性能优化-请求优化-04.mp4" controls controlsList="nodownload" width="50%"/>
-
+<video autoplay src="http://qn.chinavanes.com/interview/performance/06.前端性能优化-请求优化-04.mp4" controls controlsList="nodownload" width="100%" height="680"/>
