--- a/interview/performance-interview/11.前端性能优化-请求优化-09.md
+++ b/interview/performance-interview/11.前端性能优化-请求优化-09.md
@@ -5,5 +5,4 @@ aside: false
 
 # 11.前端性能优化-请求优化-09
 
-<video autoplay src="http://qn.chinavanes.com/interview/performance/11.前端性能优化-请求优化-09.mp4" controls controlsList="nodownload" width="50%"/>
-
+<video autoplay src="http://qn.chinavanes.com/interview/performance/11.前端性能优化-请求优化-09.mp4" controls controlsList="nodownload" width="100%" height="680"/>
