--- a/interview/project-interview/03.你在项目开发的时候遇到过Bug吗？.md
+++ b/interview/project-interview/03.你在项目开发的时候遇到过Bug吗？.md
@@ -5,5 +5,5 @@ aside: false
 
 # 03.你在项目开发的时候遇到过Bug吗？
 
-<video autoplay src="http://qn.chinavanes.com/interview/project-interview/03.你在项目开发的时候遇到过Bug吗？.mp4" controls controlsList="nodownload" width="50%"/>
+<video autoplay src="http://qn.chinavanes.com/interview/project-interview/03.你在项目开发的时候遇到过Bug吗？.mp4" controls controlsList="nodownload" width="100%" height="680"/>
 
