--- a/interview/project-interview/04.你对vue、react中的路由参数是如何理解的？.md
+++ b/interview/project-interview/04.你对vue、react中的路由参数是如何理解的？.md
@@ -3,7 +3,6 @@ title: 你对vue、react中的路由参数是如何理解的？
 aside: false
 ---
 
-# 04.你对vue、react中的路由参数是如何理解的？
+# 04.你对 vue、react 中的路由参数是如何理解的？
 
-<video autoplay src="http://qn.chinavanes.com/interview/project-interview/04.你对vue、react中的路由参数是如何理解的？.mp4" controls controlsList="nodownload" width="50%"/>
-
+<video autoplay src="http://qn.chinavanes.com/interview/project-interview/04.你对vue、react中的路由参数是如何理解的？.mp4" controls controlsList="nodownload" width="100%" height="680"/>
