--- a/interview/project-interview/05.vue、react中的路由参数有何差异？.md
+++ b/interview/project-interview/05.vue、react中的路由参数有何差异？.md
@@ -3,7 +3,6 @@ title: vue、react中的路由参数有何差异？
 aside: false
 ---
 
-# 05.vue、react中的路由参数有何差异？
+# 05.vue、react 中的路由参数有何差异？
 
-<video autoplay src="http://qn.chinavanes.com/interview/project-interview/05.vue、react中的路由参数有何差异？.mp4" controls controlsList="nodownload" width="50%"/>
-
+<video autoplay src="http://qn.chinavanes.com/interview/project-interview/05.vue、react中的路由参数有何差异？.mp4" controls controlsList="nodownload" width="100%" height="680"/>
