--- a/interview/project-interview/06.你对于gzip是否有所了解.md
+++ b/interview/project-interview/06.你对于gzip是否有所了解.md
@@ -3,7 +3,6 @@ title: 你对于gzip是否有所了解
 aside: false
 ---
 
-# 06.你对于gzip是否有所了解
+# 06.你对于 gzip 是否有所了解
 
-<video autoplay src="http://qn.chinavanes.com/interview/project-interview/06.你对于gzip是否有所了解.mp4" controls controlsList="nodownload" width="50%"/>
-
+<video autoplay src="http://qn.chinavanes.com/interview/project-interview/06.你对于gzip是否有所了解.mp4" controls controlsList="nodownload" width="100%" height="680"/>
