--- a/interview/project-interview/08.indexedDb.md
+++ b/interview/project-interview/08.indexedDb.md
@@ -5,5 +5,4 @@ aside: false
 
 # 08.indexedDb
 
-<video autoplay src="http://qn.chinavanes.com/interview/project-interview/08.indexedDb.mp4" controls controlsList="nodownload" width="50%"/>
-
+<video autoplay src="http://qn.chinavanes.com/interview/project-interview/08.indexedDb.mp4" controls controlsList="nodownload" width="100%" height="680"/>
