--- a/interview/project-interview/09.web-vitals.md
+++ b/interview/project-interview/09.web-vitals.md
@@ -5,5 +5,5 @@ aside: false
 
 # 09.web-vitals
 
-<video autoplay src="http://qn.chinavanes.com/interview/project-interview/09.web-vitals.mp4" controls controlsList="nodownload" width="50%"/>
+<video autoplay src="http://qn.chinavanes.com/interview/project-interview/09.web-vitals.mp4" controls controlsList="nodownload" width="100%" height="680"/>
 
