--- a/interview/project-interview/11.双token实现无感刷新用户认证流程梳理.md
+++ b/interview/project-interview/11.双token实现无感刷新用户认证流程梳理.md
@@ -3,7 +3,6 @@ title: 双token实现无感刷新用户认证流程梳理
 aside: false
 ---
 
-# 11.双token实现无感刷新用户认证流程梳理
+# 11.双 token 实现无感刷新用户认证流程梳理
 
-<video autoplay src="http://qn.chinavanes.com/interview/project-interview/11.双token实现无感刷新用户认证流程梳理.mp4" controls controlsList="nodownload" width="50%"/>
-
+<video autoplay src="http://qn.chinavanes.com/interview/project-interview/11.双token实现无感刷新用户认证流程梳理.mp4" controls controlsList="nodownload" width="100%" height="680"/>
