--- a/interview/project-interview/12.双token配合请求retry实现无感刷新认证应用实现.md
+++ b/interview/project-interview/12.双token配合请求retry实现无感刷新认证应用实现.md
@@ -3,7 +3,6 @@ title: 双token配合请求retry实现无感刷新认证应用实现
 aside: false
 ---
 
-# 12.双token配合请求retry实现无感刷新认证应用实现
+# 12.双 token 配合请求 retry 实现无感刷新认证应用实现
 
-<video autoplay src="http://qn.chinavanes.com/interview/project-interview/12.双token配合请求retry实现无感刷新认证应用实现.mp4" controls controlsList="nodownload" width="50%"/>
-
+<video autoplay src="http://qn.chinavanes.com/interview/project-interview/12.双token配合请求retry实现无感刷新认证应用实现.mp4" controls controlsList="nodownload" width="100%" height="680"/>
