--- a/interview/project-interview/15.利用闭包与高阶函数实现缓存函数的创建.md
+++ b/interview/project-interview/15.利用闭包与高阶函数实现缓存函数的创建.md
@@ -5,5 +5,4 @@ aside: false
 
 # 15.利用闭包与高阶函数实现缓存函数的创建
 
-<video autoplay src="http://qn.chinavanes.com/interview/project-interview/15.利用闭包与高阶函数实现缓存函数的创建.mp4" controls controlsList="nodownload" width="50%"/>
-
+<video autoplay src="http://qn.chinavanes.com/interview/project-interview/15.利用闭包与高阶函数实现缓存函数的创建.mp4" controls controlsList="nodownload" width="100%" height="680"/>
