--- a/interview/project-interview/17.REST API规范命名.md
+++ b/interview/project-interview/17.REST API规范命名.md
@@ -3,7 +3,6 @@ title: REST API规范命名
 aside: false
 ---
 
-# 17.REST API规范命名
+# 17.REST API 规范命名
 
-<video autoplay src="http://qn.chinavanes.com/interview/project-interview/17.REST API规范命名.mp4" controls controlsList="nodownload" width="50%"/>
-
+<video autoplay src="http://qn.chinavanes.com/interview/project-interview/17.REST API规范命名.mp4" controls controlsList="nodownload" width="100%" height="680"/>
