--- a/interview/project-interview/20.什么是CDN.md
+++ b/interview/project-interview/20.什么是CDN.md
@@ -3,7 +3,6 @@ title: 什么是CDN
 aside: false
 ---
 
-# 20.什么是CDN
+# 20.什么是 CDN
 
-<video autoplay src="http://qn.chinavanes.com/interview/project-interview/20.什么是CDN.mp4" controls controlsList="nodownload" width="50%"/>
-
+<video autoplay src="http://qn.chinavanes.com/interview/project-interview/20.什么是CDN.mp4" controls controlsList="nodownload" width="100%" height="680"/>
