--- a/interview/react-interview/46.React异步更新机制-利用useRef进行状态快照保存.md
+++ b/interview/react-interview/46.React异步更新机制-利用useRef进行状态快照保存.md
@@ -3,7 +3,6 @@ title: React异步更新机制-利用useRef进行状态快照保存
 aside: false
 ---
 
-# 46.React异步更新机制-利用useRef进行状态快照保存
+# 46.React 异步更新机制-利用 useRef 进行状态快照保存
 
-<video autoplay src="http://qn.chinavanes.com/interview/react-interview/46.React异步更新机制-利用useRef进行状态快照保存.mp4" controls controlsList="nodownload" width="50%"/>
-
+<video autoplay src="http://qn.chinavanes.com/interview/react-interview/46.React异步更新机制-利用useRef进行状态快照保存.mp4" controls controlsList="nodownload" width="100%" height="680"/>
