--- a/interview/react-interview/50.如何利用IntersectionObserver进行图片懒载载性能优化.md
+++ b/interview/react-interview/50.如何利用IntersectionObserver进行图片懒载载性能优化.md
@@ -3,7 +3,6 @@ title: 如何利用IntersectionObserver进行图片懒载载性能优化
 aside: false
 ---
 
-# 50.如何利用IntersectionObserver进行图片懒载载性能优化
+# 50.如何利用 IntersectionObserver 进行图片懒载载性能优化
 
-<video autoplay src="http://qn.chinavanes.com/interview/react-interview/50.如何利用IntersectionObserver进行图片懒载载性能优化.mp4" controls controlsList="nodownload" width="50%"/>
-
+<video autoplay src="http://qn.chinavanes.com/interview/react-interview/50.如何利用IntersectionObserver进行图片懒载载性能优化.mp4" controls controlsList="nodownload" width="100%" height="680"/>
