--- a/interview/react-interview/51.利用IntersectionObserver实现无限滚动.md
+++ b/interview/react-interview/51.利用IntersectionObserver实现无限滚动.md
@@ -3,7 +3,6 @@ title: 利用IntersectionObserver实现无限滚动
 aside: false
 ---
 
-# 51.利用IntersectionObserver实现无限滚动
+# 51.利用 IntersectionObserver 实现无限滚动
 
-<video autoplay src="http://qn.chinavanes.com/interview/react-interview/51.利用IntersectionObserver实现无限滚动.mp4" controls controlsList="nodownload" width="50%"/>
-
+<video autoplay src="http://qn.chinavanes.com/interview/react-interview/51.利用IntersectionObserver实现无限滚动.mp4" controls controlsList="nodownload" width="100%" height="680"/>
