--- a/interview/react-interview/52.利用hooks封装IntersectionObserver实现React中的无限滚动.md
+++ b/interview/react-interview/52.利用hooks封装IntersectionObserver实现React中的无限滚动.md
@@ -3,7 +3,6 @@ title: 利用hooks封装IntersectionObserver实现React中的无限滚动
 aside: false
 ---
 
-# 52.利用hooks封装IntersectionObserver实现React中的无限滚动
+# 52.利用 hooks 封装 IntersectionObserver 实现 React 中的无限滚动
 
-<video autoplay src="http://qn.chinavanes.com/interview/react-interview/52.利用hooks封装IntersectionObserver实现React中的无限滚动.mp4" controls controlsList="nodownload" width="50%"/>
-
+<video autoplay src="http://qn.chinavanes.com/interview/react-interview/52.利用hooks封装IntersectionObserver实现React中的无限滚动.mp4" controls controlsList="nodownload" width="100%" height="680"/>
