--- a/interview/react-interview/53.darkmode的切换应用.md
+++ b/interview/react-interview/53.darkmode的切换应用.md
@@ -5,5 +5,5 @@ aside: false
 
 # 53.darkmode的切换应用
 
-<video autoplay src="http://qn.chinavanes.com/interview/react-interview/53.darkmode的切换应用.mp4" controls controlsList="nodownload" width="50%"/>
+<video autoplay src="http://qn.chinavanes.com/interview/react-interview/53.darkmode的切换应用.mp4" controls controlsList="nodownload" width="100%" height="680"/>
 
