--- a/interview/react-interview/55.i18n实现多国语言切换处理-02.md
+++ b/interview/react-interview/55.i18n实现多国语言切换处理-02.md
@@ -3,7 +3,6 @@ title: i18n实现多国语言切换处理-02
 aside: false
 ---
 
-# 55.i18n实现多国语言切换处理-02
+# 55.i18n 实现多国语言切换处理-02
 
-<video autoplay src="http://qn.chinavanes.com/interview/react-interview/55.i18n实现多国语言切换处理-02.mp4" controls controlsList="nodownload" width="50%"/>
-
+<video autoplay src="http://qn.chinavanes.com/interview/react-interview/55.i18n实现多国语言切换处理-02.mp4" controls controlsList="nodownload" width="100%" height="680"/>
