--- a/interview/react-interview/57.react-errorboundary.md
+++ b/interview/react-interview/57.react-errorboundary.md
@@ -5,5 +5,5 @@ aside: false
 
 # 57.react-errorboundary
 
-<video autoplay src="http://qn.chinavanes.com/interview/react-interview/57.react-errorboundary.mp4" controls controlsList="nodownload" width="50%"/>
+<video autoplay src="http://qn.chinavanes.com/interview/react-interview/57.react-errorboundary.mp4" controls controlsList="nodownload" width="100%" height="680"/>
 
