--- a/interview/react-interview/58.React-2024-Roadmap.md
+++ b/interview/react-interview/58.React-2024-Roadmap.md
@@ -5,5 +5,4 @@ aside: false
 
 # 58.React-2024-Roadmap
 
-<video autoplay src="http://qn.chinavanes.com/interview/react-interview/58.React-2024-Roadmap.mp4" controls controlsList="nodownload" width="50%"/>
-
+<video autoplay src="http://qn.chinavanes.com/interview/react-interview/58.React-2024-Roadmap.mp4" controls controlsList="nodownload" width="100%" height="680"/>
