--- a/interview/typescript-interview/01.javascript开发者是否需要学习typescript.md
+++ b/interview/typescript-interview/01.javascript开发者是否需要学习typescript.md
@@ -3,7 +3,6 @@ title: javascript开发者是否需要学习typescript
 aside: false
 ---
 
-# 01.javascript开发者是否需要学习typescript
+# 01.javascript 开发者是否需要学习 typescript
 
-<video autoplay src="http://qn.chinavanes.com/interview/typescript-interview/01.javascript开发者是否需要学习typescript.mp4" controls controlsList="nodownload" width="50%"/>
-
+<video autoplay src="http://qn.chinavanes.com/interview/typescript-interview/01.javascript开发者是否需要学习typescript.mp4" controls controlsList="nodownload" width="100%" height="680"/>
