--- a/interview/typescript-interview/03.type类型在实际项目中的应用技巧.md
+++ b/interview/typescript-interview/03.type类型在实际项目中的应用技巧.md
@@ -3,7 +3,6 @@ title: type类型在实际项目中的应用技巧
 aside: false
 ---
 
-# 03.type类型在实际项目中的应用技巧
+# 03.type 类型在实际项目中的应用技巧
 
-<video autoplay src="http://qn.chinavanes.com/interview/typescript-interview/03.type类型在实际项目中的应用技巧.mp4" controls controlsList="nodownload" width="50%"/>
-
+<video autoplay src="http://qn.chinavanes.com/interview/typescript-interview/03.type类型在实际项目中的应用技巧.mp4" controls controlsList="nodownload" width="100%" height="680"/>
