--- a/interview/typescript-interview/04.ts中any、unknown、never数据类型的差异.md
+++ b/interview/typescript-interview/04.ts中any、unknown、never数据类型的差异.md
@@ -3,7 +3,6 @@ title: ts中any、unknown、never数据类型的差异
 aside: false
 ---
 
-# 04.ts中any、unknown、never数据类型的差异
+# 04.ts 中 any、unknown、never 数据类型的差异
 
-<video autoplay src="http://qn.chinavanes.com/interview/typescript-interview/04.ts中any、unknown、never数据类型的差异.mp4" controls controlsList="nodownload" width="50%"/>
-
+<video autoplay src="http://qn.chinavanes.com/interview/typescript-interview/04.ts中any、unknown、never数据类型的差异.mp4" controls controlsList="nodownload" width="100%" height="680"/>
