--- a/interview/typescript-interview/15.深入理解Axios的TypeScript类型约束-02.md
+++ b/interview/typescript-interview/15.深入理解Axios的TypeScript类型约束-02.md
@@ -3,7 +3,6 @@ title: 深入理解Axios的TypeScript类型约束-02
 aside: false
 ---
 
-# 15.深入理解Axios的TypeScript类型约束-02
+# 15.深入理解 Axios 的 TypeScript 类型约束-02
 
-<video autoplay src="http://qn.chinavanes.com/interview/typescript-interview/15.深入理解Axios的TypeScript类型约束-02.mp4" controls controlsList="nodownload" width="50%"/>
-
+<video autoplay src="http://qn.chinavanes.com/interview/typescript-interview/15.深入理解Axios的TypeScript类型约束-02.mp4" controls controlsList="nodownload" width="100%" height="680"/>
