--- a/interview/vue-interview/23.methods、watch、computed之间的差异区别.md
+++ b/interview/vue-interview/23.methods、watch、computed之间的差异区别.md
@@ -3,7 +3,6 @@ title: methods、watch、computed之间的差异区别
 aside: false
 ---
 
-# 23.methods、watch、computed之间的差异区别
+# 23.methods、watch、computed 之间的差异区别
 
-<video autoplay src="http://qn.chinavanes.com/interview/vue-interview/23.methods、watch、computed之间的差异区别.mp4" controls controlsList="nodownload" width="50%"/>
-
+<video autoplay src="http://qn.chinavanes.com/interview/vue-interview/23.methods、watch、computed之间的差异区别.mp4" controls controlsList="nodownload" width="100%" height="680"/>
