--- a/interview/vue-interview/24.你对于pinia的理解.md
+++ b/interview/vue-interview/24.你对于pinia的理解.md
@@ -3,7 +3,6 @@ title: 你对于pinia的理解
 aside: false
 ---
 
-# 24.你对于pinia的理解
+# 24.你对于 pinia 的理解
 
-<video autoplay src="http://qn.chinavanes.com/interview/vue-interview/24.你对于pinia的理解.mp4" controls controlsList="nodownload" width="50%"/>
-
+<video autoplay src="http://qn.chinavanes.com/interview/vue-interview/24.你对于pinia的理解.mp4" controls controlsList="nodownload" width="100%" height="680"/>
