--- a/interview/vue-interview/25.你对vue中的keep-alive的理解.md
+++ b/interview/vue-interview/25.你对vue中的keep-alive的理解.md
@@ -3,7 +3,6 @@ title: 你对vue中的keep-alive的理解
 aside: false
 ---
 
-# 25.你对vue中的keep-alive的理解
+# 25.你对 vue 中的 keep-alive 的理解
 
-<video autoplay src="http://qn.chinavanes.com/interview/vue-interview/25.你对vue中的keep-alive的理解.mp4" controls controlsList="nodownload" width="50%"/>
-
+<video autoplay src="http://qn.chinavanes.com/interview/vue-interview/25.你对vue中的keep-alive的理解.mp4" controls controlsList="nodownload" width="100%" height="680"木/>
