--- a/interview/vue-interview/26.vue-error-handle.md
+++ b/interview/vue-interview/26.vue-error-handle.md
@@ -5,5 +5,4 @@ aside: false
 
 # 26.vue-error-handle
 
-<video autoplay src="http://qn.chinavanes.com/interview/vue-interview/26.vue-error-handle.mp4" controls controlsList="nodownload" width="50%"/>
-
+<video autoplay src="http://qn.chinavanes.com/interview/vue-interview/26.vue-error-handle.mp4" controls controlsList="nodownload" width="100%" height="680"/>
