--- a/interview/web-worker-interview/03.客户端读取并显示XLXS文件.md
+++ b/interview/web-worker-interview/03.客户端读取并显示XLXS文件.md
@@ -3,7 +3,6 @@ title: 客户端读取并显示XLXS文件
 aside: false
 ---
 
-# 03.客户端读取并显示XLXS文件
+# 03.客户端读取并显示 XLXS 文件
 
-<video autoplay src="http://qn.chinavanes.com/interview/web-worker-interview/03.客户端读取并显示XLXS文件.mp4" controls controlsList="nodownload" width="50%"/>
-
+<video autoplay src="http://qn.chinavanes.com/interview/web-worker-interview/03.客户端读取并显示XLXS文件.mp4" controls controlsList="nodownload" width="100%" height="680"/>
