--- a/interview/web-worker-interview/04.本地读取Excel文件并进行数据压缩传递到服务器.md
+++ b/interview/web-worker-interview/04.本地读取Excel文件并进行数据压缩传递到服务器.md
@@ -3,7 +3,6 @@ title: 本地读取Excel文件并进行数据压缩传递到服务器
 aside: false
 ---
 
-# 04.本地读取Excel文件并进行数据压缩传递到服务器
+# 04.本地读取 Excel 文件并进行数据压缩传递到服务器
 
-<video autoplay src="http://qn.chinavanes.com/interview/web-worker-interview/04.本地读取Excel文件并进行数据压缩传递到服务器.mp4" controls controlsList="nodownload" width="50%"/>
-
+<video autoplay src="http://qn.chinavanes.com/interview/web-worker-interview/04.本地读取Excel文件并进行数据压缩传递到服务器.mp4" controls controlsList="nodownload" width="100%" height="680"/>
