--- a/interview/web-worker-interview/06.利用Web worker对读取Excel进行拆分并发请求进行性能优化.md
+++ b/interview/web-worker-interview/06.利用Web worker对读取Excel进行拆分并发请求进行性能优化.md
@@ -3,7 +3,6 @@ title: 利用Web worker对读取Excel进行拆分并发请求进行性能优化
 aside: false
 ---
 
-# 06.利用Web worker对读取Excel进行拆分并发请求进行性能优化
+# 06.利用 Web worker 对读取 Excel 进行拆分并发请求进行性能优化
 
-<video autoplay src="http://qn.chinavanes.com/interview/web-worker-interview/06.利用Web worker对读取Excel进行拆分并发请求进行性能优化.mp4" controls controlsList="nodownload" width="50%"/>
-
+<video autoplay src="http://qn.chinavanes.com/interview/web-worker-interview/06.利用Web worker对读取Excel进行拆分并发请求进行性能优化.mp4" controls controlsList="nodownload" width="100%" height="680"/>
