--- a/interview/performance-interview/07.前端性能优化-请求优化-05.md
+++ b/interview/performance-interview/07.前端性能优化-请求优化-05.md
@@ -5,5 +5,4 @@ aside: false
 
 # 07.前端性能优化-请求优化-05
 
-<video autoplay src="http://qn.chinavanes.com/interview/performance/07.前端性能优化-请求优化-05.mp4" controls controlsList="nodownload" width="50%"/>
-
+<video autoplay src="http://qn.chinavanes.com/interview/performance/07.前端性能优化-请求优化-05.mp4" controls controlsList="nodownload" width="100%" height="680"/>
