--- a/interview/performance-interview/09.前端性能优化-请求优化-07.md
+++ b/interview/performance-interview/09.前端性能优化-请求优化-07.md
@@ -5,5 +5,4 @@ aside: false
 
 # 09.前端性能优化-请求优化-07
 
-<video autoplay src="http://qn.chinavanes.com/interview/performance/09.前端性能优化-请求优化-07.mp4" controls controlsList="nodownload" width="50%"/>
-
+<video autoplay src="http://qn.chinavanes.com/interview/performance/09.前端性能优化-请求优化-07.mp4" controls controlsList="nodownload" width="100%" height="680"/>
