--- a/interview/performance-interview/12.前端性能优化-请求优化-10.md
+++ b/interview/performance-interview/12.前端性能优化-请求优化-10.md
@@ -5,5 +5,4 @@ aside: false
 
 # 12.前端性能优化-请求优化-10
 
-<video autoplay src="http://qn.chinavanes.com/interview/performance/12.前端性能优化-请求优化-10.mp4" controls controlsList="nodownload" width="50%"/>
-
+<video autoplay src="http://qn.chinavanes.com/interview/performance/12.前端性能优化-请求优化-10.mp4" controls controlsList="nodownload" width="100%" height="680"/>
