--- a/interview/project-interview/07.详细介绍一下node中动态数据内容的压缩应用.md
+++ b/interview/project-interview/07.详细介绍一下node中动态数据内容的压缩应用.md
@@ -3,7 +3,6 @@ title: 详细介绍一下node中动态数据内容的压缩应用
 aside: false
 ---
 
-# 07.详细介绍一下node中动态数据内容的压缩应用
+# 07.详细介绍一下 node 中动态数据内容的压缩应用
 
-<video autoplay src="http://qn.chinavanes.com/interview/project-interview/07.详细介绍一下node中动态数据内容的压缩应用.mp4" controls controlsList="nodownload" width="50%"/>
-
+<video autoplay src="http://qn.chinavanes.com/interview/project-interview/07.详细介绍一下node中动态数据内容的压缩应用.mp4" controls controlsList="nodownload" width="100%" height="680"/>
