--- a/interview/project-interview/10.为什么使用双token实现无感刷新用户认证.md
+++ b/interview/project-interview/10.为什么使用双token实现无感刷新用户认证.md
@@ -3,7 +3,6 @@ title: 为什么使用双token实现无感刷新用户认证
 aside: false
 ---
 
-# 10.为什么使用双token实现无感刷新用户认证
+# 10.为什么使用双 token 实现无感刷新用户认证
 
-<video autoplay src="http://qn.chinavanes.com/interview/project-interview/10.为什么使用双token实现无感刷新用户认证.mp4" controls controlsList="nodownload" width="50%"/>
-
+<video autoplay src="http://qn.chinavanes.com/interview/project-interview/10.为什么使用双token实现无感刷新用户认证.mp4" controls controlsList="nodownload" width="100%" height="680"/>
