--- a/interview/project-interview/13.基于位的权限系统.md
+++ b/interview/project-interview/13.基于位的权限系统.md
@@ -5,5 +5,4 @@ aside: false
 
 # 13.基于位的权限系统
 
-<video autoplay src="http://qn.chinavanes.com/interview/project-interview/13.基于位的权限系统.mp4" controls controlsList="nodownload" width="50%"/>
-
+<video autoplay src="http://qn.chinavanes.com/interview/project-interview/13.基于位的权限系统.mp4" controls controlsList="nodownload" width="100%" height="680"/>
