--- a/interview/react-interview/43.React异步更新机制-状态的展现.md
+++ b/interview/react-interview/43.React异步更新机制-状态的展现.md
@@ -3,7 +3,6 @@ title: React异步更新机制-状态的展现
 aside: false
 ---
 
-# 43.React异步更新机制-状态的展现
+# 43.React 异步更新机制-状态的展现
 
-<video autoplay src="http://qn.chinavanes.com/interview/react-interview/43.React异步更新机制-状态的展现.mp4" controls controlsList="nodownload" width="50%"/>
-
+<video autoplay src="http://qn.chinavanes.com/interview/react-interview/43.React异步更新机制-状态的展现.mp4" controls controlsList="nodownload" width="100%" height="680"/>
