--- a/interview/react-interview/44.React异步更新机制-回调函数应用.md
+++ b/interview/react-interview/44.React异步更新机制-回调函数应用.md
@@ -5,5 +5,5 @@ aside: false
 
 # 44.React异步更新机制-回调函数应用
 
-<video autoplay src="http://qn.chinavanes.com/interview/react-interview/44.React异步更新机制-回调函数应用.mp4" controls controlsList="nodownload" width="50%"/>
+<video autoplay src="http://qn.chinavanes.com/interview/react-interview/44.React异步更新机制-回调函数应用.mp4" controls controlsList="nodownload" width="100%" height="680"/>
 
