--- a/interview/react-interview/45.React异步更新机制-useEffect监听变化.md
+++ b/interview/react-interview/45.React异步更新机制-useEffect监听变化.md
@@ -5,5 +5,5 @@ aside: false
 
 # 45.React异步更新机制-useEffect监听变化
 
-<video autoplay src="http://qn.chinavanes.com/interview/react-interview/45.React异步更新机制-useEffect监听变化.mp4" controls controlsList="nodownload" width="50%"/>
+<video autoplay src="http://qn.chinavanes.com/interview/react-interview/45.React异步更新机制-useEffect监听变化.mp4" controls controlsList="nodownload" width="100%" height="680"/>
 
