--- a/interview/react-interview/47.React异步更新机制-利用useRef进行快照保存实例解析.md
+++ b/interview/react-interview/47.React异步更新机制-利用useRef进行快照保存实例解析.md
@@ -3,7 +3,6 @@ title: React异步更新机制-利用useRef进行快照保存实例解析
 aside: false
 ---
 
-# 47.React异步更新机制-利用useRef进行快照保存实例解析
+# 47.React 异步更新机制-利用 useRef 进行快照保存实例解析
 
-<video autoplay src="http://qn.chinavanes.com/interview/react-interview/47.React异步更新机制-利用useRef进行快照保存实例解析.mp4" controls controlsList="nodownload" width="50%"/>
-
+<video autoplay src="http://qn.chinavanes.com/interview/react-interview/47.React异步更新机制-利用useRef进行快照保存实例解析.mp4" controls controlsList="nodownload" width="100%" height="680"/>
