--- a/interview/react-interview/49.如何利用useRef进行性能的优化.md
+++ b/interview/react-interview/49.如何利用useRef进行性能的优化.md
@@ -5,5 +5,5 @@ aside: false
 
 # 49.如何利用useRef进行性能的优化
 
-<video autoplay src="http://qn.chinavanes.com/interview/react-interview/49.如何利用useRef进行性能的优化.mp4" controls controlsList="nodownload" width="50%"/>
+<video autoplay src="http://qn.chinavanes.com/interview/react-interview/49.如何利用useRef进行性能的优化.mp4" controls controlsList="nodownload" width="100%" height="680"/>
 
