--- a/interview/react-interview/54.i18n实现多国语言切换处理-01.md
+++ b/interview/react-interview/54.i18n实现多国语言切换处理-01.md
@@ -5,5 +5,5 @@ aside: false
 
 # 54.i18n实现多国语言切换处理-01
 
-<video autoplay src="http://qn.chinavanes.com/interview/react-interview/54.i18n实现多国语言切换处理-01.mp4" controls controlsList="nodownload" width="50%"/>
+<video autoplay src="http://qn.chinavanes.com/interview/react-interview/54.i18n实现多国语言切换处理-01.mp4" controls controlsList="nodownload" width="100%" height="680"/>
 
