--- a/interview/react-interview/56.利用react的hook实现复制粘贴操作.md
+++ b/interview/react-interview/56.利用react的hook实现复制粘贴操作.md
@@ -3,7 +3,6 @@ title: 利用react的hook实现复制粘贴操作
 aside: false
 ---
 
-# 56.利用react的hook实现复制粘贴操作
+# 56.利用 react 的 hook 实现复制粘贴操作
 
-<video autoplay src="http://qn.chinavanes.com/interview/react-interview/56.利用react的hook实现复制粘贴操作.mp4" controls controlsList="nodownload" width="50%"/>
-
+<video autoplay src="http://qn.chinavanes.com/interview/react-interview/56.利用react的hook实现复制粘贴操作.mp4" controls controlsList="nodownload" width="100%" height="680"/>
