--- a/interview/typescript-interview/02.typescript中interface与type之间的差异.md
+++ b/interview/typescript-interview/02.typescript中interface与type之间的差异.md
@@ -3,7 +3,6 @@ title: typescript中interface与type之间的差异
 aside: false
 ---
 
-# 02.typescript中interface与type之间的差异
+# 02.typescript 中 interface 与 type 之间的差异
 
-<video autoplay src="http://qn.chinavanes.com/interview/typescript-interview/02.typescript中interface与type之间的差异.mp4" controls controlsList="nodownload" width="50%"/>
-
+<video autoplay src="http://qn.chinavanes.com/interview/typescript-interview/02.typescript中interface与type之间的差异.mp4" controls controlsList="nodownload" width="100%" height="680"/>
