--- a/interview/typescript-interview/05.typescript中pick类型的理解与实际应用.md
+++ b/interview/typescript-interview/05.typescript中pick类型的理解与实际应用.md
@@ -3,7 +3,6 @@ title: typescript中pick类型的理解与实际应用
 aside: false
 ---
 
-# 05.typescript中pick类型的理解与实际应用
+# 05.typescript 中 pick 类型的理解与实际应用
 
-<video autoplay src="http://qn.chinavanes.com/interview/typescript-interview/05.typescript中pick类型的理解与实际应用.mp4" controls controlsList="nodownload" width="50%"/>
-
+<video autoplay src="http://qn.chinavanes.com/interview/typescript-interview/05.typescript中pick类型的理解与实际应用.mp4" controls controlsList="nodownload" width="100%" height="680"/>
