--- a/interview/typescript-interview/07.typescript中partial类型的理解与实际应用.md
+++ b/interview/typescript-interview/07.typescript中partial类型的理解与实际应用.md
@@ -3,7 +3,6 @@ title: typescript中partial类型的理解与实际应用
 aside: false
 ---
 
-# 07.typescript中partial类型的理解与实际应用
+# 07.typescript 中 partial 类型的理解与实际应用
 
-<video autoplay src="http://qn.chinavanes.com/interview/typescript-interview/07.typescript中partial类型的理解与实际应用.mp4" controls controlsList="nodownload" width="50%"/>
-
+<video autoplay src="http://qn.chinavanes.com/interview/typescript-interview/07.typescript中partial类型的理解与实际应用.mp4" controls controlsList="nodownload" width="100%" height="680"/>
