--- a/interview/typescript-interview/08.typescript中required类型的理解与实际应用.md
+++ b/interview/typescript-interview/08.typescript中required类型的理解与实际应用.md
@@ -3,7 +3,6 @@ title: typescript中required类型的理解与实际应用
 aside: false
 ---
 
-# 08.typescript中required类型的理解与实际应用
+# 08.typescript 中 required 类型的理解与实际应用
 
-<video autoplay src="http://qn.chinavanes.com/interview/typescript-interview/08.typescript中required类型的理解与实际应用.mp4" controls controlsList="nodownload" width="50%"/>
-
+<video autoplay src="http://qn.chinavanes.com/interview/typescript-interview/08.typescript中required类型的理解与实际应用.mp4" controls controlsList="nodownload" width="100%" height="680"/>
