--- a/interview/typescript-interview/09.typescript中record类型的理解与实际应用.md
+++ b/interview/typescript-interview/09.typescript中record类型的理解与实际应用.md
@@ -3,7 +3,6 @@ title: typescript中record类型的理解与实际应用
 aside: false
 ---
 
-# 09.typescript中record类型的理解与实际应用
+# 09.typescript 中 record 类型的理解与实际应用
 
-<video autoplay src="http://qn.chinavanes.com/interview/typescript-interview/09.typescript中record类型的理解与实际应用.mp4" controls controlsList="nodownload" width="50%"/>
-
+<video autoplay src="http://qn.chinavanes.com/interview/typescript-interview/09.typescript中record类型的理解与实际应用.mp4" controls controlsList="nodownload" width="100%" height="680"/>
