--- a/interview/typescript-interview/14.深入理解Axios的TypeScript类型约束-01.md
+++ b/interview/typescript-interview/14.深入理解Axios的TypeScript类型约束-01.md
@@ -3,7 +3,6 @@ title: 深入理解Axios的TypeScript类型约束-01
 aside: false
 ---
 
-# 14.深入理解Axios的TypeScript类型约束-01
+# 14.深入理解 Axios 的 TypeScript 类型约束-01
 
-<video autoplay src="http://qn.chinavanes.com/interview/typescript-interview/14.深入理解Axios的TypeScript类型约束-01.mp4" controls controlsList="nodownload" width="50%"/>
-
+<video autoplay src="http://qn.chinavanes.com/interview/typescript-interview/14.深入理解Axios的TypeScript类型约束-01.mp4" controls controlsList="nodownload" width="100%" height="680"/>
