--- a/interview/web-worker-interview/01.Web Worker的快速理解与简单应用.md
+++ b/interview/web-worker-interview/01.Web Worker的快速理解与简单应用.md
@@ -3,7 +3,6 @@ title: Web Worker的快速理解与简单应用
 aside: false
 ---
 
-# 01.Web Worker的快速理解与简单应用
+# 01.Web Worker 的快速理解与简单应用
 
-<video autoplay src="http://qn.chinavanes.com/interview/web-worker-interview/01.Web Worker的快速理解与简单应用.mp4" controls controlsList="nodownload" width="50%"/>
-
+<video autoplay src="http://qn.chinavanes.com/interview/web-worker-interview/01.Web Worker的快速理解与简单应用.mp4" controls controlsList="nodownload" width="100%" height="680"/>
