--- a/interview/web-worker-interview/02.Shared Worker的快速理解与简单应用.md
+++ b/interview/web-worker-interview/02.Shared Worker的快速理解与简单应用.md
@@ -3,7 +3,6 @@ title: Shared Worker的快速理解与简单应用
 aside: false
 ---
 
-# 02.Shared Worker的快速理解与简单应用
+# 02.Shared Worker 的快速理解与简单应用
 
-<video autoplay src="http://qn.chinavanes.com/interview/web-worker-interview/02.Shared Worker的快速理解与简单应用.mp4" controls controlsList="nodownload" width="50%"/>
-
+<video autoplay src="http://qn.chinavanes.com/interview/web-worker-interview/02.Shared Worker的快速理解与简单应用.mp4" controls controlsList="nodownload" width="100%" height="680"/>
